# solana-pqc-account

./: .dockerignore  .gitignore  Dockerfile  PROPOSAL.md  README.md  VALUE_TO_SOLANA.md
ace-account-kit/: Anchor.toml  Cargo.toml  README.md  ROADMAP.md  package.json
ace-account-kit/aggregator/: Cargo.toml
ace-account-kit/aggregator/src/: batch.rs  collector.rs  error.rs  lib.rs  main.rs  server.rs  types.rs
ace-account-kit/api/: Cargo.toml
ace-account-kit/api/src/: account_manager.rs  lib.rs  main.rs  models.rs  routes.rs
ace-account-kit/app/: index.html  package.json  vite.config.ts
ace-account-kit/app/src/: App.tsx  main.tsx
ace-account-kit/app/src/components/: DemoFlow.tsx  ImportWallet.tsx  KeyRotation.tsx  OwnershipProof.tsx  SmartAccount.tsx
ace-account-kit/circuits/zk-ace-circuit/: Cargo.toml  rust-toolchain.toml
ace-account-kit/circuits/zk-ace-circuit/src/: circuit_id.rs  convert.rs  lib.rs  vk_extractor.rs
ace-account-kit/demo/: Cargo.toml
ace-account-kit/demo/src/: main.rs
ace-account-kit/programs/ace-account-kit/: Cargo.toml
ace-account-kit/programs/ace-account-kit/src/: errors.rs  lib.rs  state.rs  vk.rs
ace-account-kit/programs/ace-account-kit/src/instructions/: execute.rs  execute_attested.rs  initialize.rs  mod.rs  recovery.rs  register_relay.rs  rotate_key.rs  verify_aggregated.rs  verify_ownership.rs
ace-account-kit/programs/ace-account-kit/src/verifier/: attestation.rs  mod.rs  public_inputs.rs  stark.rs  types.rs
ace-account-kit/sdk/ace-client-sdk/: Cargo.toml
ace-account-kit/sdk/ace-client-sdk/src/: error.rs  lib.rs  proof_generator.rs  smart_account.rs
ace-account-kit/tests/: ace-account-kit.ts
deploy/: nginx.conf  supervisord.conf
docs/: whitepaper.tex
scripts/: deploy_devnet.sh  setup.sh
website/: Dockerfile  package-lock.json  package.json  tailwind.config.js
website/app/: globals.css  layout.tsx  page.tsx
