[package]
name = "ace-aggregator"
version = "0.1.0"
edition = "2021"
description = "Off-chain aggregator service for AR-ACE proof-off-path batch verification"

[workspace]

[dependencies]
bincode = "1"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
serde-big-array = "0.5"
rand = "0.8"
