[package]
name = "ace-api"
version = "0.1.0"
edition = "2021"
description = "ACE Layer — Privacy-preserving account abstraction API for Solana"

[workspace]

[dependencies]
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bs58 = "0.5"
