[package]
name = "ace-demo"
version = "0.1.0"
edition = "2021"
description = "Interactive demo for ACE Layer — privacy-preserving account abstraction"

[workspace]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
colored = "2"
